fix for login section alignment.

--- a/ug/branches/ugnew_br0.3.0/src/main/webapp/styles/layout_template.css
+++ b/ug/branches/ugnew_br0.3.0/src/main/webapp/styles/layout_template.css
@@ -1,6 +1,3 @@
-
-
-
 /*
 Template Name: Internet Business
 File: Layout CSS
@@ -94,7 +91,7 @@ input.btn {
 #header .fl_left{
 	display:block;
 	float:left;
-	width:220px;
+	width:400px;
 	margin:0 0 0 0;
 	padding-left:0px;
 	}
